--- a/index.html
+++ b/index.html
@@ -3,16 +3,39 @@
 <head>
     
     <title>Document</title>
+    <style>
+header{
+    background-color: darkturquoise;
+}
 
+
+</style>
 </head>
 <body>
-    <header><h1>Vítejte na naší stránce</h1></header>
-    <nav></nav>
+    <header><h1>Vítejte na naší stránce</h1>
+    <p>Podnatpis</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="./domu.html">Domů</a></li>
+            <li>Kontakty</li>
+            <li>O nás</li>
+        </ul>
+    </nav>
     <main>
-        <section></section>
+        <section>
+            <h1>Hlavní obsah</h1>
+            <p>text</p>
+        </section>
+        <h1>Nadpis</h1>
+        <p>nějakej textík</p>
         <section></section>
     </main>
-<aside></aside>
-<footer></footer>
+<aside>
+    <p>pomoc</p>
+</aside>
+<footer>
+    <p>&copy; Lukáš Beran 2076</p>
+</footer>
 </body>
 </html>
