--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>Document</title>
     <style>
 header{
-    background-color: darkturquoise;
+    background-color: black;
+    color:goldenrod;
 }
-
+img{
+    width: 50%;
+}
+li{display: inline; 
+}
+a{text-decoration: none; color:black;}
 
 </style>
 </head>
@@ -19,13 +25,14 @@ header{
         <ul>
             <li><a href="./domu.html">Domů</a></li>
             <li>Kontakty</li>
-            <li>O nás</li>
+            <li><a href="https://necyklopedie.org/wiki/Bitva_o_p%C5%99edsednick%C3%BD_pult%C3%ADk">O nás</a></li>
         </ul>
     </nav>
     <main>
         <section>
             <h1>Hlavní obsah</h1>
             <p>text</p>
+            <img src="https://cdn.alza.cz/Foto/ImgGalery/Image/baldurs-gate-3-logo.jpg">
         </section>
         <h1>Nadpis</h1>
         <p>nějakej textík</p>
